--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/7d2c71bd53.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="header">
@@ -81,7 +82,95 @@
         </div>
     </div>
     <!-- --------------Services----------------- -->
+    <div id="services">
+        <div class="container">
+            <h1 class="sub-title">My Services</h1>
+            <div class="services-list">
+                <div>
+                    <i class="fa-solid fa-code"></i>
+                    <h2>Frontend</h2>
+                    <p>I work in latest Frontend Technologies like HTML5, CSS and JavaScript along with frameworks such as BootStrap5 and React Library.</p>
+                    <a href="#">Learn more</a>
+                </div>
+                <div>
+                    <i class="fa-solid fa-file-code"></i>
+                    <h2>Backend</h2>
+                    <p>I work in latest Backend Technologies like Node.Js, Express.Js, MongoDB, PostgreSQL, MySQL, API's and Autnetication.</p>
+                    <a href="#">Learn more</a>
+                </div>
+                <div>
+                    <i class="fa-solid fa-laptop-code"></i>
+                    <h2>Full Stack Web Development</h2>
+                    <p>I work in latest Full Stack Technology MERN/PERN Stack such as HTML5, CSS and JavaScript along with frameworks such as BootStrap5 and React Library and Node.Js, Express.Js, MongoDB, PostgreSQL, MySQL, API's and Autnetication.</p>
+                    <a href="#">Learn more</a>
+                </div>
 
+            </div>
+        </div>
+    </div>
+    <!-- --------------PortFolio----------------- -->
+    <div id="portfolio">
+        <div class="container">
+            <h1 class="sub-title">My Work</h1>
+            <div class="work-list">
+                <div class="work">
+                    <img src="./images/work-1.png" alt="work-1">
+                    <div class="layer">
+                        <h3>Work-1</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ea laudantium quo quibusdam odit esse blanditiis quaerat minus perspiciatis, fugit officia suscipit qui minima iste ad eius expedita repellendus natus!</p>
+                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <img src="./images/work-2.png" alt="work-2">
+                    <div class="layer">
+                        <h3>Work-2</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ea laudantium quo quibusdam odit esse blanditiis quaerat minus perspiciatis, fugit officia suscipit qui minima iste ad eius expedita repellendus natus!</p>
+                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <img src="./images/work-3.png" alt="work-3">
+                    <div class="layer">
+                        <h3>Work-3</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ea laudantium quo quibusdam odit esse blanditiis quaerat minus perspiciatis, fugit officia suscipit qui minima iste ad eius expedita repellendus natus!</p>
+                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+            </div>
+            <a href="#" class="btn">See More</a>
+        </div>
+    </div>
+    <!-- --------------Contact----------------- -->
+    <div id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="contact-left">
+                    <h1 class="sub-title">Contact Me</h1>
+                    <p><i class="fa-solid fa-paper-plane"></i> manishpillai64@gmail.com</p>
+                    <p><i class="fa-solid fa-phone"></i> +91 8860766569</p>
+                    <div class="social-icons">
+                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="#"><i class="fa-brands fa-twitter-square"></i></a>
+                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    </div>
+                    <a href="./docs/12305707 CV LPU.pdf" download class="btn btn2">DownLoad CV</a>
+                </div>
+                <div class="contact-right">
+                    <form>
+                        <input type="text" name="Name" placeholder="Your Name" required>
+                        <input type="email" name="email" placeholder="Your Email" required>
+                        <textarea name="Message" rows="6" placeholder="Your Message" ></textarea>
+                        <button type="submit" class="btn btn2">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>Made by Manish M Pillai</p>
+        </div>
+    </div>
 
 
 
